# SpeedTestAnalysis

./: README.md  analysis.py  hello.py  pyproject.toml  renovate.json
.github/workflows/: cd.yml
data/: sampling.csv  sampling_20250206_1200.csv  sampling_20250305_1755.csv  sampling_20250306_0928_NG.csv  sampling_20250319_1229.csv  sampling_20250715_0610.csv
