[project]
name = "speedtestanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

# NOTE: https://github.com/astral-sh/uv/issues/7703
[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]
